--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head><title>Premier labo</title></head>
 <body>
  <h1>Mise en œuvre CI/CD </h1>
-  <p>La page est en ligne !</p>
+  <p>Le papier est en ligne !</p>
 </body>
 </html>
 
