--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head><title>Premier labo</title></head>
 <body>
- <h1>Mise en œuvre CI/CD </h1>
+ <h1>Mise en œuvre CI/CD test</h1>
   <p>Le papier est en ligne !</p>
 </body>
 </html>
